deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: maclouch/nginx:1.25.3
        imagePullPolicy: Always
        volumeMounts:
        - name: config
          mountPath: /home/demo/config.html
          subPath: config.html
        - name: index
          mountPath: /home/demo/index.txt
          subPath: index.txt
      volumes:
      - name: index
        configMap:
          name: index
          items:
          - key: index.txt
            path: index.txt
      - name: config
        configMap:
          name: config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
  type: LoadBalancer
